# ca.mun.cs.comp4300.ass01

./: CMakeLists.txt  README.md
assets/: config.txt
cmake/: assets.cmake  compiler.cmake
include/: Entity.hpp  NameComponent.hpp  ShapeComponent.hpp  TransformComponent.hpp  game.hpp
src/: CMakeLists.txt  game.cpp  main.cpp
test/: CMakeLists.txt
